Revert "Fixing Accessibility bugs and insight status for Analysis (#739)"
This reverts commit 369f5fab8c3ede78c0eb474d17e4ccdf88af4831.

--- a/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-memory-rule/autohealing-memory-rule.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-memory-rule/autohealing-memory-rule.component.html
@@ -23,10 +23,10 @@
     <tr>
       <td>{{ formatBytes(rule * 1024) }}</td>
       <td>
-        <button class="image-btn" *ngIf="!editMode" (click)="editRule()" title="Edit rule" name="editRule">
+        <button class="image-btn" *ngIf="!editMode" (click)="editRule()">
           <i class="fa fa-edit"></i>
         </button>
-        <button class="image-btn" *ngIf="!editMode" (click)="deleteRule()" title="Delete rule" name="deleteRule">
+        <button class="image-btn" *ngIf="!editMode" (click)="deleteRule()">
           <i class="fa fa-trash"></i>
         </button>
       </td>
