--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/daas/configure-storage-account/configure-storage-account.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/daas/configure-storage-account/configure-storage-account.component.html
@@ -4,9 +4,9 @@
 </div>
 <div class="outline-box" *ngIf="!checkingBlobSasUriConfigured && !error">
   <div *ngIf="validationResult.BlobSasUri.length > 0">
-    <div tabindex="0">
+    <div>
       Storage account: <span class="highlight-blue">{{ getBlobSasUriShort()}}</span>
-      (<a tabindex="0" role="button" aria-label="Change storage account" style="cursor: pointer" [class.disabled]="sessionInProgress" (keyup.space)="enableEditMode()" (keyup.enter)="enableEditMode()" (click)="enableEditMode()">change</a>)
+      (<a style="cursor: pointer" [class.disabled]="sessionInProgress" (click)="enableEditMode()">change</a>)
     </div>
     <div style="font-size: smaller">Memory dumps captured via this tool will be stored in this storage account</div>
   </div>
