--- a/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-requests-rule/autohealing-requests-rule.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-requests-rule/autohealing-requests-rule.component.html
@@ -27,10 +27,10 @@
       <td>{{ rule.count }}</td>
       <td>{{ rule.timeInterval }}</td>
       <td>
-        <button class="image-btn" *ngIf="!editMode" (click)="editRule()" title="Edit rule" name="editRule">
+        <button class="image-btn" *ngIf="!editMode" (click)="editRule()">
           <i class="fa fa-edit"></i>
         </button>
-        <button class="image-btn" *ngIf="!editMode" (click)="deleteRule()" title="Delete rule" name="deleteRule">
+        <button class="image-btn" *ngIf="!editMode" (click)="deleteRule()">
           <i class="fa fa-trash"></i>
         </button>
       </td>
