--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/toggle-button/toggle-button.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/toggle-button/toggle-button.component.html
@@ -4,10 +4,10 @@
     </label>
     <div class="setting-control-container" [class.toggle-disabled]="isDisabled">
       <div role="radiogroup" class="medium" aria-disabled="false">
-        <div role="radio" [class.toggle-disabled]="isDisabled" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(false)" attr.aria-checked="{{!selected ? 'true': 'false'}}" attr.aria-labelledby="{{ ToggleText }} Off">
+        <div role="radio" [class.toggle-disabled]="isDisabled" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(false)" attr.aria-checked="{{!selected ? 'true': 'false'}}" aria-labelledby="Off">
           Off
         </div>
-        <div role="radio" [class.toggle-disabled]="isDisabled" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(true)" attr.aria-checked="{{selected ? 'true': 'false'}}" attr.aria-labelledby="{{ ToggleText }} On">
+        <div role="radio" [class.toggle-disabled]="isDisabled" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(true)" attr.aria-checked="{{selected ? 'true': 'false'}}" aria-labelledby="On">
           On
         </div>
       </div>
