--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/memorydump-tool/memorydump-tool.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/memorydump-tool/memorydump-tool.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h2 tabindex="0">{{ title }}</h2>
-    <p tabindex="0">{{ description }}</p>
+    <div class="header1">{{ title }}</div>
+    <p>{{ description }}</p>
     <div class="wizardcontainer">
 
         <daas [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" [diagnoserName]="diagnoserName" (SessionsEvent)="updateSessions($event)">
