--- a/AngularApp/projects/app-service-diagnostics/src/assets/custom-timeline.css
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/custom-timeline.css
@@ -10,3 +10,31 @@
 .vis-item {
     cursor: pointer;
 }
+
+div.vis-tooltip {
+   font-family: "Segoe UI", "Segoe UI", "Segoe", Tahoma, Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    width: 350px;
+    height: 150px;
+    word-break: break-all;
+    background-color: #0072c6;
+     /* These are technically the same, but use both */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+    white-space: pre-line;
+    color: #fff;
+    border: 1px solid #0072c6;
+    border-radius: 10px;
+}
