--- a/AngularApp/projects/app-service-diagnostics/src/assets/custom-timeline.css
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/custom-timeline.css
@@ -15,9 +15,9 @@ div.vis-tooltip {
    font-family: "Segoe UI", "Segoe UI", "Segoe", Tahoma, Helvetica, Arial, sans-serif;
     font-size: 13px;
     width: 350px;
-    height: 150px;
+    height: 145px;
     word-break: break-all;
-    background-color: #0072c6;
+    background-color: #fff;
      /* These are technically the same, but use both */
     overflow-wrap: break-word;
     word-wrap: break-word;
@@ -34,7 +34,11 @@ div.vis-tooltip {
     -webkit-hyphens: auto;
     hyphens: auto;
     white-space: pre-line;
-    color: #fff;
-    border: 1px solid #0072c6;
+    color: #646464;
+    border: 1px solid #fff;
     border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.133) 0px 6.4px 14.4px 0px, rgba(0, 0, 0, 0.11) 0px 1.2px 3.6px 0px;
+}
+.vis-tooltip span{
+    color:  #323130;
 }
