--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isWindowsWebApp&&!isExternalSub">
+<ng-container *ngIf="initializedPortalVersion === 'v3'">
   <div *ngIf="useLegacy" class="switch2new-context-text">
     <i class="fa fa-info-circle info-banner-icon"></i>
     We have recently launched the new version of App Service Diagnostics.
