--- a/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.html
@@ -26,7 +26,7 @@
     </div>
     <div *ngIf="searchResults && searchResults.length>0">
         <div class="article-container">
-          <div class="article-heading">Here are some documents from the web that might help you</div>
+          <div class="article-heading" tabindex="0">Here are some documents from the web that might help you</div>
           <div class="article" *ngFor="let article of searchResults" (click)="selectResult(article)" tabindex="0" (keyup.enter)="selectResult(article)" >
             <a>{{article.title}}
               <i class="fa fa-external-link"></i>
