Allow selection of custom time range on analysis graph. Disable zoom when custom selection is done on the graph. Disable zoom on analysis graph when some other graph is zoomed in. Make crosshair appear on top of the plotbands while syncing the mouse hover position across graphs by setting a higher z index for myPlotLine.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/dynamic-insight/dynamic-insight.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/dynamic-insight/dynamic-insight.component.html
@@ -55,7 +55,8 @@
 
   <div class="panel-body" *ngIf="insight.isExpanded">
     <div *ngIf="insight.description" [innerHtml]="insight.description"></div>
-    <dynamic-data [diagnosticData]="insight.innerDiagnosticData" [startTime]="startTime" [endTime]="endTime"  [xAxisPlotBands]="xAxisPlotBands"  [isAnalysisView]="isAnalysisView">
+    <dynamic-data [diagnosticData]="insight.innerDiagnosticData" [startTime]="startTime" [endTime]="endTime"  [xAxisPlotBands]="xAxisPlotBands" 
+    [zoomBehavior] = "zoomBehavior" (XAxisSelection)="onXAxisSelection($event)"  [isAnalysisView]="isAnalysisView">
     </dynamic-data>
   </div>
 </div>
