--- a/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
@@ -6,7 +6,7 @@
 
 <ng-template #highchartGraphView>
 <highcharts-graph [HighchartData]="selectedHighChartSeries" [chartDescription]="renderingProperties.description" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions"
-[xAxisPlotBands]="xAxisPlotBands">
+[xAxisPlotBands]="xAxisPlotBands" [zoomBehavior] = "zoomBehavior" (XAxisSelection)="onXAxisSelection($event)">
 </highcharts-graph >
   <div *ngIf="!selectedSeries">Loading Data...</div>
 </ng-template>
