Make downtimes UI work only when the downtimes rendering type is present. Without the rendering type, maintain the default analysis behavior.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -70,6 +70,9 @@
 <div *ngIf="isAnalysisView && downTimes.length > 0" class="dynamic-data-container">  
   <h2>Showing results for time range {{ getTimestampAsString(selectedDownTime.StartTime) }} to {{ getTimestampAsString(selectedDownTime.EndTime) }}</h2>
 </div>
+<div *ngIf="isAnalysisView && supportsDownTime && downTimes.length == 0" class="dynamic-data-container">  
+  <h2>Drag and select a time window on the graph</h2>
+</div>
 
 <cxp-chat-launcher *ngIf="showChatButton()" [trackingId] = "cxpChatTrackingId" [chatUrl] = "cxpChatUrl" ></cxp-chat-launcher>
 <loader-view style="margin-top:300px" *ngIf="!detectorDataLocalCopy && !errorState"
