--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.scss
@@ -54,3 +54,20 @@
 .downtime-select{
     margin-bottom: 10px;
 }
+
+.downtime-container {
+    display:inline-flex;
+    flex-flow: row;
+    align-items: baseline;
+    border:0.15em solid darkgrey;
+    border-radius: 2em;
+    padding-left: 1em;
+    padding-right:2em;
+    padding-top:1em;
+    padding-bottom: 0.5em;
+}
+
+.downtime-icon {
+    padding-right: 0.5em;
+    color:deepskyblue
+}
