AutoHeal UI Fix for Status Codes Rule

--- a/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-statuscodes-rule/autohealing-statuscodes-rule.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-statuscodes-rule/autohealing-statuscodes-rule.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="rule == null && !editMode">
+<div>
   If your app is failing with HTTP Server errors, you can configure a rule to mitigate the issue or collect diagnostic data
   to identify the root cause of the problem. You can configure rules on more than one HTTP Status code condition.
 
