--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -1,6 +1,6 @@
 <span *ngIf="showPreLoadingError" style="margin-left:30px;margin-top:10px;">{{preLoadingErrorMessage}}</span>
 <span *ngIf="showPreLoader"><i class="fa fa-circle-o-notch fa-2x fa-spin preloading-icon"></i></span>
-<div *ngIf = "searchMode != SearchAnalysisMode.Genie && inDrillDownMode">
+<div *ngIf = "searchMode != SearchAnalysisMode.Genie && inDrillDownMode && this.isPublic">
   <div>
     <div style="display: inline-block;margin-left: 20px">
       <h2>{{ detectorName }}</h2>
@@ -9,6 +9,24 @@
       <a tabindex="0" (keyup.enter)="goBackToAnalysis()" aria-label="Link to go back to the analysis view" role="button"
         (click)="goBackToAnalysis()" >Back to Observations</a>
     </div>
+  </div>
+</div>
+<div *ngIf = "inDrillDownMode && !this.isPublic">
+  <div style="margin-left:20px" class="tab-container" >
+    <div style="margin-left:20px;margin-bottom: 10px">
+      <div style="display: inline-block">
+        <h4>{{ detectorName }}</h4>
+      </div>
+      <div class="pull-right">
+  
+        <div style="display: inline-block">
+            <button class="btn btn-sm" (click)="navigateToDetector()">Go to Detector</button>
+        </div>
+        <div style="display: inline-block;margin-left: 10px;margin-right:20px">
+            <button class="btn btn-sm" (click)="goBackToAnalysis()">Back to Observations</button>
+        </div>
+      </div>
+    </div>  
   </div>
 </div>
 <div *ngIf = "!inDrillDownMode">
