--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
@@ -1,5 +1,5 @@
 <div inViewport [inViewportOptions]="{ threshold: [0.3, 0.7] }" (inViewportAction)="listenVisibility($event)" role="search">
-<div *ngIf="searchConfiguration.DetectorSearchEnabled || searchConfiguration.WebSearchEnabled">
+<div *ngIf="showSearchBar && (searchConfiguration.DetectorSearchEnabled || searchConfiguration.WebSearchEnabled)">
     <div style="display:block;margin-bottom:10px;margin-top:10px;" tabindex="0">
         <span class="span-h1">Didn’t find what you’re looking for? Tell us about your problem below, and we may be able to provide some additional diagnostics:</span>
     </div>
@@ -36,7 +36,7 @@
         <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
         <span style="margin-left:5px">Fetching diagnostics...</span>
     </span>
-    <div *ngIf="showSearchTermPractices && (!webSearchResults || webSearchResults.length==0)" class="no-results-section">
+    <div *ngIf="showSearchTermPractices && (forceShowSearchPractices || (!webSearchResults || webSearchResults.length==0))" class="no-results-section">
         <span class="no-results-header">Your search "{{searchTermDisplay}}" did not yield any diagnostics results.</span>
         <span class="no-results-content">Suggestions:</span>
         <ul class="no-results-content">
