Fix p2 accessibility bugs for feedback,search bar and time-picker (#773)
* Fix for bug 7095031

* Fix bug 7095054

* Fix bug 7095107

* Fix bug 7095002

* Fix aria-label for startTime and endTime(7095473)

* Fix bug 7095465

* Update Fix for 7095054

* Fix bugs for 7095134, 7095150, 7095284

* Remove commented code

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
@@ -1,6 +1,7 @@
 .selected-icon {
     // border: 1px dotted blue;
     color: rgb(255, 185, 0);
+    position: relative;
 }
 
 // .feedback-info {
@@ -43,4 +44,22 @@
 
 .svg-icon {
     fill:red;
+}
+
+.feedback-icon .tooltiptext {
+    display:none;
+    background: white;
+}
+
+.feedback-icon:hover .tooltiptext {
+    display: block;
+    opacity: 1;
+    background: white!important;
+    white-space: nowrap;
+    z-index: 999;
+    margin-top: 6px;
+    position: absolute;
+    border: 1px solid black;
+    padding: 3px;
+    font-size: 12px;
 }
